--- a/descricaoFeminina/CanoCurtoFeminina.html
+++ b/descricaoFeminina/CanoCurtoFeminina.html
@@ -4,15 +4,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descrição da Meia</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>Meias Sene</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="lele.css">
 </head>
 
 <body>
-    <div class="descricao-meia">
-        <img id="imagemMeia" src="" alt="Imagem da Meia">
-        <p id="descricaoMeia"></p>
-    </div>
+    <header id="header">
+        <div class="cabecalhoUm">
+            <div class="imagemLogo">
+                <img src="../img/logoSene.png" alt="Logo meias sene">
+            </div>
+            <div class="pesquisa">
+                <input class="procurando" type="text" placeholder="O que você está procurando?">
+            </div>
+        </div>
+        <div class="linha"></div>
+        <nav class="cabecalho2">
+            <a href="" class="item">Baby Fem</a>
+            <a href="" class="item">Baby Masc</a>
+            <a href="" class="item">Kids Fem</a>
+            <a href="" class="item">Kids Masc</a>
+            <a href="" class="item">Adulto Fem</a>
+            <a href="" class="item">Adulto Masc</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="descricao-meia">
+                <img id="imagemMeia" src="" alt="Imagem da Meia">
+
+            </div>
+            <div class="TodasInformacoes">
+                <div class="informacoes">
+                    <h2 class="titulo">Cano Curto - Lisa Preta</h2>
+                    <p class="codigo">Código: 4631</p>
+                </div>
+                <div class="linhaDescricaoDoProduto"></div>
+                <div class="informacoesPrecoTamanho">
+                    <h3 class="preco">R$ 4,70</h3>
+                    <h3 class="numeracao"> 34 á 38</h3>
+                    <button class="btn-shopee"> Compre na Shopee <i class="fas fa-store"></i></button>
+                    <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
+                </div>
+            </div>
+        </div>
+
+        <section class="DescricaoDoProduto">
+            <h2 class="titulo-DescricaoProduto">DESCRIÇÃO DO PRODUTO</h2>
+            <div class="linhaUm-Descricao-do-produto"></div>
+            <div class="linhaDois-Descricao-do-produto"></div>
+            <div class="texto-Descricao">
+                <p>Uma meia cano curto lisa é um tipo de perfil ou moldura que possui uma seção transversal
+                    semicircular, criando uma aparência suave e arredondada. É curta, indicando que sua extensão ou
+                    comprimento é limitado, e lisa, o que significa que não possui texturas ou detalhes adicionais em
+                    sua superfície.</p>
+                <div class="elementosDoTexto-Descricao">
+                    <p>• Algodão 60% </p>
+                    <p>• Poliamida 28% </p>
+                    <p>• Elastano 4%</p>
+                    <p>• Elastodieno 3%</p>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="CompreJunto">
+            <h1 class="titulo-CompreJunto">APROVEITE E COMPRE JUNTO </h1>
+            <div class="linhaTres-CompreJunto"></div>
+            <div class="todas-as-meias-feminina-cano-curto">
+                <div class="Quadrado-da-meia-preta-cano-curto" id="div-meia-cano-curto">
+                    <div class="container"> <img src="img-feminino/MeiaCanoCurto-Preta.png" alt=""></div>
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="preta"></div>
+                            <div class="branca"></div>
+                            <div class="cinza"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$4,70</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+
+
+                <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
+                    <div class="container"><img src="img-feminino/CanoCurto-3-Cinza.png" alt=""></div>
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                        <div class="cores-branca-preto-cinza">
+                            <div class="pretaKit"></div>
+                            <div class="brancaKit"></div>
+                            <div class="cinzaKit"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+
+
+
+                <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto" id="div-meia-cano-curto">
+                    <div class="container"> <img src="img-feminino/CanoCurto-3-PretaCinzaBranca.png" alt=""></div>
+                    <div class="informacoes-meia-cano-curto-feminino">
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 34 á 38</h3>
+                    </div>
+                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
+                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
+                    </div>
+                </div>
+
+
+
+
+        </section>
+    </main>
+
+
+
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
