--- a/descricaoFeminina/CanoCurtoFeminina.html
+++ b/descricaoFeminina/CanoCurtoFeminina.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="lele.css">
+    <link rel="stylesheet" href="style-feminino.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="linhaDescricaoDoProduto"></div>
                 <div class="informacoesPrecoTamanho">
-                    <h3 class="preco">R$ 4,70</h3>
+                    <h3 class="precoContainer">R$ 4,70</h3>
                     <h3 class="numeracao"> 34 á 38</h3>
                     <button class="btn-shopee"> Compre na Shopee <i class="fas fa-store"></i></button>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
@@ -73,20 +73,22 @@
         <section class="CompreJunto">
             <h1 class="titulo-CompreJunto">APROVEITE E COMPRE JUNTO </h1>
             <div class="linhaTres-CompreJunto"></div>
-            <div class="todas-as-meias-feminina-cano-curto">
-                <div class="Quadrado-da-meia-preta-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurto-Preta.png" alt=""></div>
-                    <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="preta"></div>
-                            <div class="branca"></div>
-                            <div class="cinza"></div>
+            <div class="todasAsMeiasBaby-CompreJunto">
+                <div class="Quadrado-da-meia-Color-Baby" id="divMeiasBaby">
+                    <div class="Imagem-CompreJunto"> <img src="../img-baby/MeiaRosa-Feminina.png" alt=""></div>
+                    <div class="informacoesMeiaBaby">
+                        <h3 class="MeiaBabySubtitulo"> Meia Baby Color’s Feminina</h3>
+                        <h3 class="numeracao"> 0 á 6 meses</h3>
+                        <div class="coresMeiaBabyColor">
+                            <div class="RosaClaro"></div>
+                            <div class="Lilas"></div>
+                            <div class="VerdeAgua"></div>
+                            <div class="RosaChoque"></div>
+                            <div class="Branco"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$4,70</h3>
+                        <h3 class="preco">R$ 3,65 </h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -94,19 +96,19 @@
 
 
 
-                <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"><img src="img-feminino/CanoCurto-3-Cinza.png" alt=""></div>
-                    <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
-                        <div class="cores-branca-preto-cinza">
-                            <div class="pretaKit"></div>
-                            <div class="brancaKit"></div>
-                            <div class="cinzaKit"></div>
+                <div class="Quadrado-da-Meia-Desenhada-Baby" id="divMeiasBaby">
+                    <div class="Imagem-CompreJunto"><img src="../img-baby/MeiaDesenhadaAzulEscuro-Feminina.png" alt="">
+                    </div>
+                    <div class="informacoesMeiaBaby">
+                        <h3 class="MeiaBabySubtitulo"> Meia Baby Desenhada Feminina</h3>
+                        <h3 class="numeracao"> 6 á 12 meses</h3>
+                        <div class="coresMeiaDesenhada">
+                            <div class="AzulEscuro"></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="preco">R$: 3,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -115,24 +117,108 @@
 
 
 
-                <div class="Quadrado-do-kit-preta-cinza-branco-cano-curto" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/CanoCurto-3-PretaCinzaBranca.png" alt=""></div>
-                    <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
+                <div class="Quadrado-da-Meia-Desenhada-Baby" id="divMeiasBaby">
+                    <div class="Imagem-CompreJunto"> <img src="../img-baby/MeiaBrancaSapatilha-Masculina.png" alt="">
+                    </div>
+                    <div class="informacoesMeiaBaby">
+                        <h3 class="MeiaBabySubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="numeracao"> 6 á 12 meses</h3>
+                        <div class="coresSapatilhaBaby">
+                            <div class="BrancoSapatilha"></div>
+                            <div class="VermelhoSapatilha"></div>
+                            <div class="AzulEscuroSapatilha"></div>
+                            <div class="AzulClaroSapatilha"></div>
+                            <div class="VerdeAguaSapatilha"></div>
+                        </div>
                     </div>
                     <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
-                        <h3 class="preco">R$14,10</h3>
+                        <h3 class="preco">R$ 3,40 </h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
                     </div>
                 </div>
-
-
-
-
+            </div>
         </section>
     </main>
+
+    <footer id="footer">
+        <div class="container-rodape">
+            <div class="linha1-rodape">
+                <div class="logo-rodape">
+                    <a href="index.html"><img src="../img/logoSene.png" alt="logo Sene" class="imgLogo-rodape"></a>
+                </div>
+                <div class="contatos-rodape">
+                    <p class="titulo-rodape">CONTATOS</p>
+                    <div class="whats-rodape">
+                        <a href="https://wa.me/5516997021783?text=Olá,%20gostaria%20de%20tirar%20algumas%20dúvidas%20sobre%20as%20Meias%20Sene."
+                            target="_blank">
+                            <img src="../img/whatsApp.png" alt="WhatsApp" class="imgContatos-rodape">
+                        </a>
+                        <p class="texto-rodape">(16) 99702-1783</p>
+                    </div>
+                    <div class="email-rodape">
+                        <a
+                            href="mailto:meiassene@hotmail.com?subject=Dúvidas&body=Olá,%20gostaria%20de%20tirar%20algumas%20dúvidas%20sobre%20as%20Meias%20Sene.">
+                            <img src="../img/email.png" alt="Email" class="imgContatos-rodape">
+                        </a>
+                        <p class="texto-rodape">meiassene@hotmail.com</p>
+                    </div>
+                </div>
+                <div class="acompanhe-rodape">
+                    <p class="titulo-rodape">ACOMPANHE</p>
+                    <div class="redes-rodape">
+                        <a href="https://www.instagram.com/meiasseneoficial/?hl=pt-br"><img src="../img/instagram.png"
+                                alt="instagram" class="imgRedes-rodape"></a>
+                        <a href="https://www.facebook.com/meiasseneoficial/?locale=pt_BR"><img src="../img/facebook.png"
+                                alt="facebook" class="imgRedes-rodape"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="linha2-rodape">
+                <div class="institucional-rodape">
+                    <p class="titulo-rodape">INSTITUCIONAL</p>
+                    <div class="textoInst-rodape">
+                        <a href="rodape/representantes.html">
+                            <p class="texto2-rodape">Representantes</p>
+                        </a>
+                        <a href="rodape/meios.html">
+                            <p class="texto2-rodape">Meios de pagamento e de frete</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="categorias-rodape">
+                    <p class="titulo-rodape">CATEGORIAS</p>
+                    <div class="categGeral-rodape">
+                        <div class="subCategoria1-rodape">
+                            <a href="babyFeminino">
+                                <p class="texto2-rodape">Baby Feminino</p>
+                            </a>
+                            <a href="babyMasculino">
+                                <p class="texto2-rodape">Baby Masculino</p>
+                            </a>
+                            <a href="kidsFeminino">
+                                <p class="texto2-rodape">Kids Feminino</p>
+                            </a>
+                        </div>
+                        <div class="subCategoria2-rodape">
+                            <a href="kidsMasculino">
+                                <p class="texto2-rodape">Kids Masculino</p>
+                            </a>
+                            <a href="adultoFeminino">
+                                <p class="texto2-rodape">Adulto Feminino</p>
+                            </a>
+                            <a href="adultoMasculino">
+                                <p class="texto2-rodape">Adulto Masculino</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="final-rodape">
+                <p class="textoFinal-rodape">© 2024 Meias Sene. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
 
 
 
@@ -157,6 +243,101 @@
                 });
         });
     </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script>
+        const imagensPorCor = {
+            'Quadrado-da-meia-Color-Baby': {
+                Branco: '../img-baby/MeiaBranca-Feminina.png',
+                RosaClaro: '../img-baby/MeiaRosaClaro-Feminina.png',
+                RosaChoque: '..img-baby/MeiaRosaChoque-Feminina.png',
+                Lilas: '../img-baby/MeiaLilas-Feminina.png',
+                VerdeAgua: '../img-baby/MeiaVerdeAgua-Feminina.png'
+            },
+
+            'Quadrado-da-Meia-Desenhada-Baby': {
+                BrancoSapatilha: '../img-baby/MeiaBrancaSapatilha-Masculina.png',
+                VermelhoSapatilha: '../img-baby/MeiaBrancaVermelhaSapatilha-Masculina.png',
+                AzulEscuroSapatilha: '../img-baby/MeiaBrancaAzulEscuroSapatilha-Masculina.png',
+                AzulClaroSapatilha: '../img-baby/MeiaBrancaAzulClaroSapatilha-Masculina.png',
+                VerdeAguaSapatilha: '../img-baby/MeiaBrancaVerdeAguaSapatilha-Masculina.png'
+             }
+
+        };
+
+
+
+
+        // Para cada quadrado de meia na seção "todas-as-meias-feminina-cano-curto"
+        document.querySelectorAll('.todasAsMeiasBaby-CompreJunto > div').forEach((quadrado) => {
+            // Seleciona a imagem da meia dentro do quadrado atual
+            const imgMeia = quadrado.querySelector('img');
+
+            // Seleciona todas as cores disponíveis para o quadrado atual
+            const cores = quadrado.querySelectorAll('.RosaClaro, .Lilas, .VerdeAgua, .RosaChoque, .Branco, .AzulEscuro, .BrancoSapatilha, .VermelhoSapatilha, .AzulEscuroSapatilha, .AzulClaroSapatilha, .VerdeAguaSapatilha');
+
+            // Obtém o nome da classe do quadrado (primeiro nome de classe)
+            const quadradoId = quadrado.className.split(' ')[0];
+
+            // Armazena a imagem atual para restaurar depois
+            let currentImage = imgMeia.src;
+
+            // Armazena a cor selecionada pelo usuário
+            let selectedColor = '';
+
+            // Adiciona eventos para cada cor
+            cores.forEach((cor) => {
+                // Obtém o nome da classe da cor (ex.: preta, branca, cinza)
+                const corNome = cor.className;
+
+                // Quando o mouse está sobre a cor
+                cor.addEventListener('mouseover', () => {
+                    // Troca a imagem da meia para a cor correspondente
+                    imgMeia.src = imagensPorCor[quadradoId][corNome];
+                });
+
+                // Quando o mouse sai da cor
+                cor.addEventListener('mouseout', () => {
+                    // Restaura a imagem original da meia
+                    imgMeia.src = currentImage;
+                });
+
+                // Quando a cor é clicada
+                cor.addEventListener('click', () => {
+                    // Atualiza a imagem da meia para a cor selecionada
+                    currentImage = imagensPorCor[quadradoId][corNome];
+                    selectedColor = corNome;
+                    imgMeia.src = currentImage;
+                });
+            });
+
+            // Evento para o botão "Eu Quero!" dentro do quadrado atual
+            quadrado.querySelector('.botao-euQuero').addEventListener('click', () => {
+                const corSelecionada = selectedColor;
+
+                if (corSelecionada) {
+                    window.location.href = `descricaoFeminina/CanoCurtoFeminina.html?cor=${corSelecionada}`;
+                } else {
+                    alert('Por favor, selecione uma cor.');
+                }
+            });
+
+        });
+
+    </script>
+
 </body>
 
 </html>
