--- a/index.html
+++ b/index.html
@@ -208,6 +208,38 @@
             </div>
 
         </section>
+        <section class="section">
+            <div class="container">
+
+            </div>
+        </section>
+        <section class="section" id="revendedor">
+            <div class="container">
+                <div class="tudoRevendedor">
+                    <div class="imgRevendedor">
+                        <img src="img/revendedor.png" alt="">
+                    </div>
+                    <div class="textoRevendedor">
+                        <div class="tituloCabecalho">
+                            <h2>SEJA UM <span>REVENDEDOR</span></h2>
+                        </div>
+                        <div class="imagemLogo">
+                            <img src="img/logoSene.png" alt="">
+                        </div>
+                        <div class="caixasRevendedor">
+                            <div class="caixinha">
+                                <img src="img/telefone.png" alt="">
+                                <p>Telefone</p>
+                            </div>
+                            <div class="caixinha">
+                                <img src="img/formulario.png" alt="">
+                                <p>Formulário</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer id="footer">
 
