--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -55,7 +55,7 @@
                 <div class="Quadrado-do-kit-cinza-cano-curto" id="div-meia-cano-curto">
                     <div class="container"><img src="img-feminino/CanoCurto-3-Cinza.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa Kit 3 Pares</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-branca-preto-cinza">
                             <div class="pretaKit"></div>
@@ -91,7 +91,7 @@
                 <div class="Quadrado-da-meia-verde-cano-curto" id="div-meia-cano-curto">
                     <div class="container"> <img src="img-feminino/MeiaCanoCurto-BrancaVerdeMusgo.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-verdeEscuro-verdeClaro-cinza">
                             <div class="verdeClaro"></div>
@@ -112,7 +112,7 @@
                 <div class="Quadrado-da-meia-BrancaRosa-cano-curto" id="div-meia-cano-curto">
                     <div class="container"> <img src="img-feminino/MeiaCanoCurto-BrancaRosa.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-rosa-verde">
                             <div class="verdeAgua"></div>
@@ -133,7 +133,7 @@
                 <div class="Quadrado-da-meia-pretaRosa-cano-curto" id="div-meia-cano-curto">
                     <div class="container"> <img src="img-feminino/MeiaCanoCurto-PretaRosa.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Lisa</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Cano Curto - Desenhada Sortida</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
                         <div class="cores-roxo-pretaRosa">
                             <div class="roxo"></div>
