uma parte para terminar...

--- a/index.html
+++ b/index.html
@@ -208,9 +208,64 @@
             </div>
 
         </section>
-        <section class="section">
+        <section class="section" id="sobreMeias">
             <div class="container">
-
+                <div class="tudoSobreMeia">
+                    <div class="tituloCabecalho">
+                        <h2><span>MEIAS SENE: CONFORTO QUE ACOMPANHA CADA PASSO, DESDE 1995</span></h2>
+                    </div>
+                    <div class="textoSobreMeia">
+                        <p>A Meias Sene está situada na cidade de Tabatinga, no interior do estado de São Paulo. Produzimos conforto, qualidade e segurança em toda a nossa linha de meias, do recém-nascido até a melhor idade. Sempre alinhados com as tendências de mercado, investimos constantemente em novas tecnologias e materiais para garantir produtos que atendam às necessidades dos nossos clientes.
+                        <br>
+                        <br>
+                        Nosso compromisso é oferecer não apenas estilo e bem-estar, mas também durabilidade, garantindo que cada meia seja sinônimo de confiança e satisfação. Valorizamos o cuidado em cada detalhe, porque acreditamos que o conforto começa pelos pés.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="Objetivos">
+            <div class="container">
+                <div class="tudoObjet">
+                    <div class="cadaObjet">
+                        <div class="imgObjet">
+                            <img src="img/obj01.png" alt="">
+                        </div>
+                        <div class="textoObjet">
+                            <div class="tituloCabecalho">
+                                <h2>Missão</h2>
+                            </div>
+                            <div class="textinhoObjet">
+                                <p>Superar as expectativas dos nossos clientes, com a certeza da nossa qualidade tecida fio a fio,  sempre com as melhores matérias primas e a tecnologia de nossas maquinas.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cadaObjet obj02">
+                        <div class="imgObjet">
+                            <img src="img/obj02.png" alt="">
+                        </div>
+                        <div class="textoObjet">
+                            <div class="tituloCabecalho">
+                                <h2>Visão</h2>
+                            </div>
+                            <div class="textinhoObjet">
+                                <p>Se tornar referência no setor têxtil, transformando em meias seus sonhos e o compromisso continuo dos seus produtos.</p>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="cadaObjet">
+                        <div class="imgObjet">
+                            <img src="img/obj03.png" alt="">
+                        </div>
+                        <div class="textoObjet">
+                            <div class="tituloCabecalho">
+                                <h2>Valores</h2>
+                            </div>
+                            <div class="textinhoObjet">
+                                <p>Satisfação do nosso cliente, sempre com transparência e confiança, alinhado a valorização e respeito aos nossos colaboradores.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section" id="revendedor">
@@ -236,6 +291,15 @@
                                 <p>Formulário</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="tendencias">
+            <div class="container">
+                <div class="tudoTendencias">
+                    <div class="tituloCabecalho">
+                        <h2>NOSSAS <span>TENDÊNCIAS</span></h2>
                     </div>
                 </div>
             </div>
